商品頁+手頁手機版調整

--- a/src/App.scss
+++ b/src/App.scss
@@ -168,6 +168,9 @@ footer {
     // );
     box-shadow: 10px 10px 0 0 #8fc06574;
   }
+  // i{
+  //   width: 50px;
+  // }
 }
 //文章區橫幅banner，more按鈕
 .moreBtn {
