--- a/src/styles/Restaurant/_reslist.scss
+++ b/src/styles/Restaurant/_reslist.scss
@@ -39,6 +39,7 @@
   @include mobile {
     margin: 20px;
     height: 170px;
+    min-width: 350px;
 
     .reslist-txt {
       padding: 15px 8px 0 7px;
