--- a/src/styles/Product/_Products.scss
+++ b/src/styles/Product/_Products.scss
@@ -284,49 +284,33 @@ input[name='pd-filter'] + label {
   margin: auto;
   justify-content: center;
   align-items: center;
-  color: #2a593e;
   margin-bottom: 20px;
 }
+// 被點到時加上
 .pd-pages-active{
   color: #8fc065 !important;
   font-weight: bold;
 }
-// .page-pre,
-// .page-next,
 .total-page {
   font-size: 16px;
   margin: 0px 10px;
 }
-.page div{
-  text-align: center;
-}
 .page div a{
   color: #2a593e; 
+  text-align:center;
+  margin: 0 5px;
 }
 .page {
   font-size: 20px;
   margin: 0 20px;
   justify-content: center;
   align-items: center;
-  color: #2a593e; 
 
 }
 .page-btn-wrap i {
   cursor: pointer;
 }
-.page div{
-  margin-right: 15px;
-  color: #2a593e;
-  text-decoration: none;
-  text-align: center;
-}
-.page p {
-  text-align: center;
-  margin-bottom: 0;
-}
-.page a:hover {
-  color: hsla(146, 36%, 26%, 0.5);
-}
+
 /* 背景圖 */
 .pd-bg-img {
   position: absolute;
