--- a/src/styles/Product/_Customize.scss
+++ b/src/styles/Product/_Customize.scss
@@ -172,14 +172,7 @@
   align-items: center;
   margin: 50px 0px;
 }
-// .pd-img {
-//   width: 130px;
-//   height: 130px;
-//   border-radius: 50%;
-//   overflow: hidden;
-//   top: -50px;
-//   position: absolute;
-// }
+
 .pd-img img {
   width: 100%;
   height: 100%;
@@ -233,7 +226,52 @@
   justify-content: space-around;
   flex-wrap: wrap;
   margin-bottom: 50px;
+  // position: relative;
 }
+// 查看更多連結
+.pd-viewmore-wrap{
+  position: absolute;
+  transform: translate(100px);
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  transition: .3s;
+  max-width: 185px;
+  .pd-viewmore{
+    color: #8fc065;
+    transition: .3s;
+  }
+  
+  // icon
+  .front,.back{
+    line-height: 24px;
+    height: 24px;
+    font-size: 16px;
+    color: #8fc065;
+    margin-right: 10px;
+    transition: .3s;
+    font-size: 20px;
+  }
+  .back{
+    transform: translate(-10px);
+    color: transparent;
+  }
+  :hover {
+    letter-spacing: 3px;
+    font-weight: bold;
+  }
+}
+.pd-viewmore-wrap:hover .front{
+  transform: translate(10px);
+  color: transparent;
+}
+.pd-viewmore-wrap:hover .back{
+  transform: translate(10px);
+  color: #8fc065;
+}
+
 @media (max-width: 992px) {
   /* 商品區 */
   .pd-card {
