--- a/src/styles/Product/_Customize.scss
+++ b/src/styles/Product/_Customize.scss
@@ -1,6 +1,12 @@
 .dkgreen {
   color: #2a593e;
 }
+.ltgreen {
+  color: #8fc065;
+}
+.orange{
+  color: #fb6107;
+}
 .mb50{
   margin-bottom: 50px;
 }
@@ -92,6 +98,7 @@
 }
 .pd-cusClick {
   border: 4px solid #fb6107;
+  transform: translateY(-5px);
   box-shadow: 0px 10px 40px rgba(211, 211, 211, 0.808);
 }
 /* 右區 */
@@ -138,13 +145,15 @@
   color: white;
   cursor: pointer;
   margin: 0 auto;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 .pd-client-btn:focus {
   outline: none;
 }
 .pd-client-btn:hover {
-  box-shadow: 4px 4px 20px #fd92548c;
+  // background-color: #ffb606;
+  box-shadow: 4px 0 20px lightgray;
+  transform: translateY(-5px);
 }
 .pd-suggest {
   flex-direction: column;
@@ -156,6 +165,9 @@
 .pd-suggest p {
   font-size: 28px;
   letter-spacing: 3px;
+}
+.pd-suggest span {
+  margin: 0px 10px;
 }
 .pd-day {
   color: #fb6107;
@@ -226,12 +238,12 @@
   justify-content: space-around;
   flex-wrap: wrap;
   margin-bottom: 50px;
-  // position: relative;
+  position: relative;
 }
 // 查看更多連結
 .pd-viewmore-wrap{
   position: absolute;
-  transform: translate(100px);
+  transform: translate(600px, 250px);
   font-size: 16px;
   display: flex;
   align-items: center;
@@ -255,7 +267,7 @@
     font-size: 20px;
   }
   .back{
-    transform: translate(-10px);
+    transform: translate(-1px);
     color: transparent;
   }
   :hover {
@@ -271,6 +283,8 @@
   transform: translate(10px);
   color: #8fc065;
 }
+
+
 
 @media (max-width: 992px) {
   /* 商品區 */
@@ -315,6 +329,7 @@
   .pd-none {
     width: 100px;
     height: 100px;
+    transition: .3s;
   }
   .pd-target-wrap {
     background-color: transparent;
