--- a/src/App.scss
+++ b/src/App.scss
@@ -130,6 +130,30 @@ footer {
 }
 
 /*----------- Navbar -----------*/
+.MyNavbar {
+
+  background-color: green;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 20%);
+
+  .navLogoWrap {
+    width: 120px;
+    padding: 0 20px;
+    img {
+      width: 100%;
+    }
+  }
+
+  .active {
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+  }
+  .navText {
+    color: black;
+    &:hover {
+      color: $light-green;
+    }
+  }
+}
+
 .myNavbarNew {
   text-align: center;
   box-shadow: 0px 4px 4px rgb(0 0 0 / 20%);
@@ -148,66 +172,37 @@ footer {
 }
 
 /*----------- 首頁 -----------*/
+
 //首頁小按鈕
 .hp_sBtn {
   border: 2px solid $light-green;
   box-sizing: border-box;
-  border-radius: 100px;
+  border-radius: 50px;
   display: inline-block;
   letter-spacing: 3px;
-  padding: 15px 50px;
+  padding: 5px 30px;
   font-size: 16px;
   color: $light-green;
   cursor: pointer;
   background-color: white;
   margin-top: 3px;
-  transition: .3s;
   &:hover {
-    // filter: drop-shadow(
-    //   15px 15px 0px rgba(143, 192, 101, 0.5)
-    // );
-    box-shadow: 10px 10px 0 0 #8fc06574;
+    filter: drop-shadow(
+      15px 15px 0px rgba(143, 192, 101, 0.5)
+    );
   }
-  // i{
-  //   width: 50px;
-  // }
 }
 //文章區橫幅banner，more按鈕
 .moreBtn {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   font-size: 24px;
-  color: hsla(0, 0%, 0%, 0.6);
-  max-width: 200px;
 
   div {
     p {
       margin-bottom: -4px;
-    }
-  }
-}
-
-//查看推薦＋專欄區更多文章按鈕
-.col_RM_btn {
-  width: 100%;
-  text-align: center;
-
-  button {
-    background: $light-orange;
-    border-radius: 100px;
-    border: none;
-    color: white;
-    margin: 20px auto;
-    letter-spacing: 5px;
-    font-size: 24px;
-    padding: 15px 80px;
-    letter-spacing: 3px;
-
-    &:hover {
-      background: $light-yellow;
-      box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.14);
     }
   }
 }
@@ -329,7 +324,7 @@ footer {
     }
   }
   /*---------- 客製化  ----------*/
-  #hp_customized {
+  #customized {
     @include spaceBetweenCat;
     .title {
       text-align: center;
@@ -345,14 +340,16 @@ footer {
       width: 70%;
       margin: 30px auto;
 
-      select, input {
+      select {
         border-radius: 15px;
         letter-spacing: 10px;
         text-align: center;
-        padding: 5px 10px;
       }
-      select {
-        padding: 3px 30px;
+
+      input {
+        text-align: center;
+        border-radius: 15px;
+        letter-spacing: 10px;
       }
     }
   }
@@ -490,13 +487,9 @@ footer {
       width: 100%;
     }
     .imgWrap {
-      height: 60vh;
-      padding: 0 20px;
-      overflow: hidden;
       display: flex;
       .imgbox {
-        padding: 0 20px;
-        transform: translateX(5px) rotate(15deg);
+        transform: translateX(20px) rotate(15deg);
         padding: 25px 20px;
       }
       @include NOmobile;
@@ -512,12 +505,6 @@ footer {
 }
 
 /*----------- 轉盤 -----------*/
-
-//Bootstrap Modal 客制化
-.modal-xs{
-  max-width: 220px;
-}
-
 .game-card-wrap{
   border-radius: 1rem;
 }
