--- a/src/styles/Restaurant/_map.scss
+++ b/src/styles/Restaurant/_map.scss
@@ -8,7 +8,7 @@
     padding: 5px 12px;
     width: 145px;
     h5 {
-      color: $light-green;
+      color: $dark-green;
       font-weight: 700;
       font-size: 16px;
     }
@@ -21,6 +21,11 @@
       color: $dark-green;
       font-size: 12px;
       margin: 5px 0;
+    }
+    h6 {
+      font-weight: 700;
+      color: $light-green;
+      font-size: 14px;
     }
   }
 }
@@ -75,6 +80,11 @@
       font-size: 16px;
 
       line-height: 1.5;
+    }
+    p {
+      font-weight: 700;
+      font-size: 14px;
+      color: $light-green;
     }
   }
 
