--- a/src/styles/Product/_Customize.scss
+++ b/src/styles/Product/_Customize.scss
@@ -358,6 +358,10 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 30px;
+    color: #2a593e;
+    label{
+      color: #2a593e !important;
+    }
   }
   .pd-gender,
   .pd-years,
