--- a/src/styles/Product/_Products.scss
+++ b/src/styles/Product/_Products.scss
@@ -28,10 +28,10 @@ body {
   height: 400px;
   background: linear-gradient(
         90deg,
-        rgb(255, 255, 255) 50%,
+        rgb(255, 255, 255) 52%,
         transparent 10%
       )
-      center center / 100% 100%,
+      center center / 120% 120%,
     url('http://localhost:3000/images/Product/pd-banner-all.png')
       100% center / auto 100% !important;
 }
@@ -67,7 +67,7 @@ body {
   width: 100%;
   height: 400px;
   background: linear-gradient(
-        110deg, 
+        100deg, 
         rgb(255, 255, 255) 52%,
         transparent 10%
       )
@@ -81,6 +81,7 @@ body {
   height: 100%;
 }
 .pd-banner-text {
+  padding-left: 100px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -285,6 +286,11 @@ input[name='pd-filter'] + label {
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  color: #2a593e;
+
+  .page-next{
+    margin-right: 20px;
+  }
 }
 // 被點到時加上
 .pd-pages-active{
@@ -292,13 +298,13 @@ input[name='pd-filter'] + label {
   font-weight: bold;
 }
 .total-page {
-  font-size: 16px;
+  font-size: 20px;
   margin: 0px 10px;
 }
 .page div a{
   color: #2a593e; 
   text-align:center;
-  margin: 0 5px;
+  margin: 0 10px;
 }
 .page {
   font-size: 20px;
@@ -330,6 +336,9 @@ input[name='pd-filter'] + label {
 /* RWD */
 
 @media (max-width: 992px) {
+  .text-indent3 {
+    text-indent: 0rem;
+  }
   /* banner */
   .pd-banner,
   .pd-banner-table,
@@ -344,7 +353,7 @@ input[name='pd-filter'] + label {
           transparent 10%
         )
         center center / 100% 100%,
-      url() 100% center / auto 100%;
+        url('http://localhost:3000/images/Product/pd-banner-table.jpeg') 100% center / auto 100% !important;
   }
   .pd-banner-workout {
     background: linear-gradient(
@@ -353,7 +362,7 @@ input[name='pd-filter'] + label {
           transparent 10%
         )
         center center / 100% 100%,
-      url() 100% center / auto 100%;
+        url('http://localhost:3000/images/Product/pd-banner-workout.jpeg') 100% center / auto 100% !important;
   }
   .pd-banner-material {
     background: linear-gradient(
@@ -364,7 +373,9 @@ input[name='pd-filter'] + label {
         center center / 100% 100%,
       url() 100% center / auto 100%;
   }
-
+  .pd-banner-text{
+    padding-left: 0px;
+  }
   .pd-ba-title {
     font-size: 30px;
     border-bottom: none;
