--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@
 @import './styles/Restaurant/map';
 @import './styles/Restaurant/resmapsearch';
 @import './styles/custom';
+@import './styles/Restaurant/ToTop';
 
 //signup
 @import './styles/Member/MemberSignup';
