--- a/src/styles/Carts/CartManage.scss
+++ b/src/styles/Carts/CartManage.scss
@@ -486,6 +486,7 @@
       color: var(--Third-color);
       font-family: var(--Font-Family);
       font-weight: var(--Second-Font-Weight);
+      margin-top: 20px;
     }
     input {
       width: 100%;
@@ -493,8 +494,26 @@
       border: transparent;
       height: 50px;
       background-color: #f5f4f2;
+      padding: 0 20px;
+    }
+    select {
+      width: 100%;
+      border-radius: 50px;
+      border: transparent;
+      height: 50px;
+      background-color: #f5f4f2;
       margin-bottom: 20px;
       padding: 0 20px;
+
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+    }
+    .ChevronDown {
+      font-size: 25px;
+      color: var(--Primary-color);
+      top: 40%;
+      left: 92%;
     }
   }
   span {
