--- a/src/App.scss
+++ b/src/App.scss
@@ -132,7 +132,6 @@ footer {
 
 /*----------- Navbar -----------*/
 .MyNavbar {
-
   background-color: green;
   box-shadow: 0px 4px 4px rgb(0 0 0 / 20%);
 
@@ -187,7 +186,7 @@ footer {
   cursor: pointer;
   background-color: white;
   margin-top: 3px;
-  transition: .3s;
+  transition: 0.3s;
   // font-family;
   font-family: 'Poppins';
   filter: none;
@@ -195,10 +194,10 @@ footer {
     // filter: drop-shadow(
     //   15px 15px 0px rgba(143, 192, 101, 0.5)
     // );
-    
+
     box-shadow: 10px 10px 0 0 #8fc06574;
   }
-  i{
+  i {
     margin-left: 15px;
   }
 }
@@ -234,7 +233,7 @@ footer {
     font-size: 24px;
     padding: 15px 80px;
     letter-spacing: 3px;
-    transition: .3s;
+    transition: 0.3s;
 
     &:hover {
       background: $light-yellow;
@@ -328,9 +327,10 @@ footer {
         }
       }
       .spin {
-        position: absolute;
-        right: 0;
-        bottom: 0;
+        // position: absolute;
+        // position: fixed;
+        // right: 0;
+        // bottom: 0;
         transform: translateX(-20px) rotate(-15deg);
 
         img {
@@ -373,8 +373,8 @@ footer {
     }
   }
 
-  .hp-client{
-    margin-top: 50px
+  .hp-client {
+    margin-top: 50px;
   }
 
   /*---------- 商城  ----------*/
@@ -528,16 +528,20 @@ footer {
 }
 
 /*----------- 轉盤 -----------*/
-.game-card-wrap{
+.game-card-wrap {
   border-radius: 1rem;
 }
 
-@keyframes rotation{
-  from {-webkit-transform: rotate(0deg);}
-  to {-webkit-transform: rotate(360deg);}
+@keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
 }
- 
-.img-rotate{
+
+.img-rotate {
   border-radius: 50%;
   transform: rotate(360deg);
   animation: rotation 1.4s linear infinite;
