20211108_cart_完成信用卡填寫資料警示初版

--- a/src/styles/Carts/CartManage.scss
+++ b/src/styles/Carts/CartManage.scss
@@ -302,7 +302,7 @@
         border: transparent;
         height: 50px;
         background-color: #f5f4f2;
-        margin-bottom: 20px;
+        // margin-top: 20px;
       }
     }
   }
@@ -356,6 +356,19 @@
       background-color: #f5f4f2;
       text-align: center;
       margin-bottom: 20px;
+    }
+    select {
+      width: 47%;
+      border-radius: 50px;
+      border: transparent;
+      height: 50px;
+      background-color: #f5f4f2;
+      margin-bottom: 20px;
+      padding: 0 20px;
+
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
     }
     .star {
       color: #ff0000;
