修改會員中心scss樣式

--- a/src/styles/Member/_MemberFavoriteProduct.scss
+++ b/src/styles/Member/_MemberFavoriteProduct.scss
@@ -43,8 +43,9 @@
   }
   .member-icon {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: center;
   }
 }
 /* 大標 */
