--- a/src/styles/Carts/ProcessChart.scss
+++ b/src/styles/Carts/ProcessChart.scss
@@ -46,6 +46,9 @@
   @include mobile() {
     margin: 80px auto;
 
+    .arrow {
+      font-size: 40px;
+    }
     .icons {
       font-size: 40px;
     }
