--- a/src/styles/Member/_MemberProfile.scss
+++ b/src/styles/Member/_MemberProfile.scss
@@ -91,7 +91,8 @@
         border-color: transparent;
         color: #fff;
         font-size: 16px;
-        padding: 5px 30px;
+        height: 40px;
+        width: 150px;
         letter-spacing: 1px;
         text-indent: 1px;
         margin: 20px 0;
