--- a/src/styles/Member/_MemberReview.scss
+++ b/src/styles/Member/_MemberReview.scss
@@ -140,3 +140,15 @@
         margin-top: 20px;
         border-top: 3px solid #2a593e;
       }
+      .member-review-send-btn {
+        background-color: #8fc065;
+        border-radius: 50px;
+        border-color: transparent;
+        color: #fff;
+        font-size: 16px;
+        padding: 5px 30px;
+        letter-spacing: 1px;
+        text-indent: 1px;
+        margin: 20px 0;
+        white-space: nowrap;
+      }
