--- a/src/styles/Member/_MemberSignup.scss
+++ b/src/styles/Member/_MemberSignup.scss
@@ -35,6 +35,7 @@
           letter-spacing: 1px;
           text-indent: 1px;
           margin-bottom: 15px;
+          line-height: 51px;
         }
       } 
       @media (max-width: 575.99px) {
@@ -70,6 +71,7 @@
           letter-spacing: 1px;
           text-indent: 1px;
           margin: 0 0 20px 0;
+          line-height: 46px;
         }
       }
       #karin-signup-h1 {
