--- a/src/styles/Restaurant/_map.scss
+++ b/src/styles/Restaurant/_map.scss
@@ -31,6 +31,7 @@
 }
 
 //共用
+
 .mapImg {
   width: 100%;
   height: 90%;
@@ -131,11 +132,10 @@
   @include sortBtn($light-orange, 2px, 20px);
   @include mobile {
     display: block;
-    margin-top: 20px;
   }
 }
 
-.map-searchbar {
+.filternone {
   @include pad {
     display: none;
   }
