--- a/src/styles/Carts/CartPreOrder.scss
+++ b/src/styles/Carts/CartPreOrder.scss
@@ -7,10 +7,10 @@
 }
 
 /* SHOPPING_CART */
-.bottom-line {
-  height: 1px;
-  border: 0.5px solid var(--Process-hide-color);
-}
+// .bottom-line {
+//   height: 1px;
+//   border: 0.5px solid var(--Process-hide-color);
+// }
 
 .shoppingtitle {
   span {
@@ -57,9 +57,12 @@
         font-size: var(--Order-list-title-size);
         color: var(--Primary-color);
         margin: 0 10px;
+        cursor: pointer;
       }
       .trashIcon {
         color: var(--Second-color);
+        font-size: 24px;
+        cursor: pointer;
       }
     }
 
@@ -122,6 +125,7 @@
 
 /* 你可能也會喜歡 */
 .likemore {
+  margin-bottom: 150px;
   h4 {
     font-size: var(--Button-font-size);
     font-family: var(--Font-Family);
@@ -132,16 +136,24 @@
   .bottomline {
     // height: 1px;
     border: 1px solid #000000;
-    margin: 20px 10px;
+    // margin: 20px 10px;
   }
 }
 .storelike {
   .storecard {
+    transition: .3s;
     .storeproduct {
+      margin-right: 15px;
+      cursor: pointer;
       .storeicon {
+        margin: 10px;
+        display: flex;
+        padding-left: 60px !important;
+        justify-content: space-evenly;
+        align-items: center;
         .cartlike {
           font-size: 40px;
-          color: #ffffff;
+          color: #8fc065;
           margin: 0 10px;
         }
         .full {
@@ -152,8 +164,11 @@
         }
       }
       .body {
-        background: var(--Primary-color);
-        box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.25);
+        // background: var(--Primary-color);
+        background-color:#ffb91759 ;
+
+        
+        // box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.25);
         border-radius: 15px;
       }
       img {
@@ -161,10 +176,15 @@
         left: 0%;
       }
       p {
-        color: #ffffff;
+        color: #2a593e;
         font-size: var(--Order-list-title-size);
         font-family: var(--Font-Family);
+        margin: 5px;
+        padding-left: 10px;
       }
+    }
+    &:hover{
+      transform: translate(0px, -5px);
     }
     img {
       width: 120px;
@@ -190,16 +210,23 @@
 
 .morecard {
   text-align: center;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 
   h1 {
     color: var(--Third-color);
     font-weight: var(--Second-Font-Weight);
     font-family: var(--Font-English-Family);
-    font-size: var(--Button-font-size);
+    font-size: 24px;
+    line-height: 24px;
+    margin-bottom: 0;
+
   }
   .DoubleRight {
-    font-size: 50px;
+    font-size: 24px;
     color: var(--Third-color);
+    margin-right: 10px;
   }
 }
 
@@ -334,6 +361,12 @@
   .promotion {
     input {
       width: 50%;
+      padding: 3px 3px 3px 10px;
+      border: 1px solid #8fc065;
+      border-radius: 5px;
+      &:focus{
+        outline: none;
+      }
     }
 
     button {
@@ -351,7 +384,7 @@
       font-family: var(--Font-Family);
       padding: var(--button-padding);
       border-radius: 50px;
-      background-color: var(--Primary-color);
+      background-color: var(--Third-color);
       color: #ffffff;
       border: transparent;
       outline: transparent;
@@ -375,17 +408,18 @@
   font-size: var(--Order-list-title-size);
   font-family: var(--Font-Family);
   padding: var(--button-padding);
-  border-radius: 50px;
-  background-color: #ffffff;
-  color: var(--Third-color);
+  border-radius: 100px;
+  background-color: #8fc065;
+  color: white;
   font-weight: var(--Second-Font-Weight);
-  border: 1px solid var(--Third-color);
+  border: 1px solid #8fc065;
 }
 
 .orderconfirm:hover {
-  background-color: var(--Primary-color);
-  border: 1px solid var(--Third-color);
+  background-color: #2a593e;
+  // border: 1px solid var(--Third-color);
   color: #ffffff;
+  border:1px solid #2a593e;
 }
 
 .returnstore {
@@ -394,15 +428,16 @@
   padding: var(--button-padding);
   border-radius: 50px;
   background-color: #ffffff;
-  color: var(--Third-color);
+  color: #2a593e;
   font-weight: var(--Second-Font-Weight);
-  border: 1px solid var(--Third-color);
+  border: 1px solid #2a593e;
 }
 
 .returnstore:hover {
-  background-color: var(--Primary-color);
-  border: 1px solid var(--Third-color);
+  background-color: #2a593e;
+  // border: 1px solid var(--Third-color);
   color: #ffffff;
+  border: 1px solid #2a593e;
 }
 
 @include mobile() {
