--- a/src/styles/Member/_MemberReview.scss
+++ b/src/styles/Member/_MemberReview.scss
@@ -28,7 +28,11 @@
       .member-review-button {
           display: flex;
           justify-content: space-around;
-        }
+      }
+      .member-top-check-btn{
+          display: flex;
+          justify-content: center;
+      }
       }
       @media screen and (max-width: 575.99px) {
         .row{
