--- a/src/App.scss
+++ b/src/App.scss
@@ -66,11 +66,14 @@ $light-orange: #fb6107;
 
 main {
   padding-top: 60px;
+  min-height: calc(100vh - 250px);
+  margin-bottom: 100px;
 }
 /*------------------------------ 元件 ------------------------------*/
 /*----------- footer -----------*/
 footer {
   color: $light-green;
+
 
   .logo {
     margin: auto;
@@ -255,7 +258,7 @@ footer {
 
     &:hover {
       background: $light-yellow;
-      box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.14);
+      // box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.14);
     }
   }
 }
@@ -600,50 +603,65 @@ footer {
         }
       }
     }
-    .imgWrap {
+    .hpResRun {
       @include NOmobile;
-      display: flex;
-      max-width: 620px;
-      max-height: 720px;
+      img {
+        width: 100%;
+      }
+
+      max-width: 500px;
+      max-height: 500px;
       overflow: hidden;
 
       .imgbox {
-        transform: translateX(20px) rotate(15deg);
-        padding: 25px 20px;
+        transform: rotate(10deg);
+        padding-right: 25px 20px;
+      }
 
-        img {
-          width: 100%;
+      .imgboxLeft {
+        flex-wrap: nowrap;
+        animation: goUp 25s linear infinite;
+        &:hover {
+          animation-play-state: paused;
         }
       }
 
-      //首頁餐廳動畫
-      // .imgboxLeft {
-      //   animation: hpResCarousel 1.5s infinite;
-      // }
-
-      // @keyframes hpResCarousel {
-      //   0% {
-      //     bottom: 0;
-      //   }
-      //   100% {
-      //     bottom: 100px;
-      //   }
-      // }
-
-      .imgboxLeft {
-        bottom: 100px;
+      .imgboxRight {
+        flex-wrap: nowrap;
+        animation: goDown 25s linear infinite;
+        &:hover {
+          animation-play-state: paused;
+        }
       }
-    }
-    .deliveryWrap {
-      margin-top: 30%;
-      img {
-        width: 80%;
+
+      @keyframes goUp {
+        0% {
+          transform: translateY(0);
+        }
+        100% {
+          transform: translateY(-50%);
+        }
       }
-      @include NOmobile;
+
+      @keyframes goDown {
+        0% {
+          transform: translateY(-50%);
+        }
+        100% {
+          transform: translateY(0);
+        }
+      }
+
+      .deliveryWrap {
+        margin-top: 30%;
+        img {
+          width: 80%;
+        }
+        @include NOmobile;
+      }
     }
   }
 }
-
 /*----------- 轉盤 -----------*/
 .game-card-wrap {
   border-radius: 1rem;
