delete main padding-top

--- a/src/styles/article/Article.scss
+++ b/src/styles/article/Article.scss
@@ -185,6 +185,9 @@
 /*------------------------------ 專欄文章內文 (第三層1/2) ------------------------------*/
 
 .col-article {
+  .pd-love-icon{
+    // margin-bottom: 16px;
+  }
   .imgWrap {
     max-width: 1000px;
     max-height: 500px;
