--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,7 @@ $light-orange: #fb6107;
 }
 
 main {
-  // padding-top: 60px;
+  padding-top: 60px;
   min-height: calc(100vh - 250px);
   margin-bottom: 100px;
 }
