--- a/src/styles/Member/_MemberFavoriteProduct.scss
+++ b/src/styles/Member/_MemberFavoriteProduct.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-around !important;
   }
   .member-favorite-card .card {
     max-width: 540px;
