--- a/src/styles/article/Article.scss
+++ b/src/styles/article/Article.scss
@@ -145,6 +145,7 @@
     width: 28%;
     margin: auto;
     margin-bottom: 5px;
+    border-radius: 15px;
 
     .imgWrap {
       height: 250px;
@@ -186,12 +187,13 @@
 
 .col-article {
   .pd-love-icon{
-    // margin-bottom: 16px;
+    font-size: 16px;
   }
   .imgWrap {
-    max-width: 1000px;
-    max-height: 500px;
+    // max-width: 1000px;
+    height: 500px;
     overflow: hidden;
+    text-align: center;
   }
   img {
     width: 100%;
@@ -219,8 +221,9 @@
     box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.15);
     border-radius: 15px;
     margin: 20px 0 25px 0;
+    // max-width: 1000px;
     p {
-      padding: 30px 40px;
+      padding: 50px 70px;
       margin: 16px 0;
     }
   }
