--- a/src/styles/Product/_Products.scss
+++ b/src/styles/Product/_Products.scss
@@ -37,6 +37,7 @@ body {
 }
 /* 快速上桌banner */
 .pd-banner-table {
+  padding-top: 60px;
   width: 100%;
   height: 400px;
   background: linear-gradient(
