--- a/src/styles/Product/_ProductDetail.scss
+++ b/src/styles/Product/_ProductDetail.scss
@@ -207,6 +207,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 10px 10px;
 }
 .dt-reviews-wrap {
   align-items: center;
@@ -230,7 +231,7 @@
   justify-content: space-between;
 }
 .dt-comments-wrap p {
-  font-size: 16px;
+  font-size: 18px;
   color: #2a593e;
 }
 .dt-member-img {
